replace wildcard CORS with allowlist (#5012)